@@ -22,3 +22,4 @@
 #undef OCAML_VERSION_EXTRA
 #undef OCAML_VERSION
 #undef OCAML_VERSION_STRING
+#undef OCAML_RELEASE_NUMBER
