@@ -246,6 +246,15 @@ val force_instrumented_runtime: bool
 val afl_instrument : bool
 (** Whether afl-fuzz instrumentation is generated by default *)
 
+val bytecode_runtime_id : string
+(** The RuntimeID for ocamlrun and libcamlrun_shared
+
+    @since 5.1.0 *)
+
+val native_runtime_id : string
+(** The RuntimeID for libasmrun_shared
+
+    @since 5.1.0 *)
 
 (** Access to configuration values *)
 val print_config : out_channel -> unit
