@@ -74,6 +74,9 @@ let flat_float_array = %%FLAT_FLOAT_ARRAY%%
 let function_sections = %%FUNCTION_SECTIONS%%
 let afl_instrument = %%AFL_INSTRUMENT%%
 
+let bytecode_runtime_id = "%%BYTECODE_RUNTIME_ID%%"
+let native_runtime_id = "%%NATIVE_RUNTIME_ID%%"
+
 let architecture = "%%ARCH%%"
 let model = "%%MODEL%%"
 let system = "%%SYSTEM%%"
